--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,10 +1,2 @@
 <!-- Create your form here -->
-<%= form_tag posts_path do %>
-  <label>First name:</label><br>
-  <%= text_field_tag :first_name %>
-
-  <label>Last Name</label><br>
-  <%= text_field_tag :last_name %><br>
-
-  <%= submit_tag "Submit Post" %>
-<% end %>
+<%= render 'form' %>
