--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_tag students_path do %>
   <label>First name:</label><br>
-  <%= text_field_tag :first_name %>
+  <%= text_field_tag :first_name %><br>
 
   <label>Last Name</label><br>
   <%= text_field_tag :last_name %><br>
