--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,4 +1,5 @@
-<h1>Fill out student Form</h1>
+<h1>New Students</h1>
+<h2>Fill out student form:</h2>
 
 <%= form_tag students_path do %>
   <label>First name:</label><br>
