--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,5 +1,5 @@
-<h1>New Students</h1>
-<h3>Fill out student form:</h3>
+<h1>Student Form</h1>
+<h3>Fill out fields:</h3>
 
 <%= form_tag students_path do %>
   <label>First name:</label><br>
