automatically backed up by learn

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,7 +3,7 @@
   <ol>
     <% @students.each do |student| %>
       <li>
-        <div><%= link_to student.to_s, student_path(student) %></div>
+        <div><%= link_to (student.to_s, student_path(student)) %></div>
         <br>
       </li>
     <% end %>
